--- a/Style/Style.css
+++ b/Style/Style.css
@@ -29,16 +29,22 @@
 	}
 .info {
 	width: 100%;
-	height: 555px;
+	height: auto;
 	background-color: #f8f8f8;
 	border-color: #A8A7A7;
 	border-style:solid;
 	border-width:1px;
 	border-radius:9px;
 	}
-#avatar {
+.imageavatar {
 	
-
+	position: relative;
+	margin: 36px 0px 52px 0px;
+	left: 800px;
+	
+}
+	
+}
 .proinfo {
 	font-size: 25px;
 	border-bottom-color: #A8A7A7;
