--- a/Style/Style.css
+++ b/Style/Style.css
@@ -5,8 +5,8 @@
 	padding: 0;
 }
 .container {
-	margin: 30px;
-	padding: 0;
+	margin: 20px;
+	padding: 0px;
 	}
 .navbar{
 	width: 100%;
@@ -27,8 +27,8 @@
 	padding-right: 30px;
 	padding-top: 20px;
 	}
-.info {
-	width: 100%;
+.avatarinfo {
+	width: 90%;
 	height: auto;
 	background-color: #f8f8f8;
 	border-color: #A8A7A7;
@@ -36,14 +36,11 @@
 	border-width:1px;
 	border-radius:9px;
 	}
-.imageavatar {
-	
-	position: relative;
-	margin: 36px 0px 52px 0px;
-	left: 800px;
-	
+.info {
+	padding-left: 5%;
 }
-	
+.avatar {
+	padding-left: 37%
 }
 .proinfo {
 	font-size: 25px;
@@ -91,6 +88,7 @@
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
 	padding-bottom: 2.8%;
+	
 }
 .skill {
 	font-size: 25px;
@@ -100,9 +98,16 @@
 	padding-bottom: 2.8%;
 }
 .headerR {
-	font-size: 18px;
+	font-size: 20px;
 	color: #72AB00;
-	padding-top: 2%
+	padding-top: 2%;
+	list-style-type: none;
+}
+.listsystem ul li{
+	list-style-type: none;
+}
+.listskill ul li {
+	list-style-type: none;
 }
 .main2 {
 	font-size:14px;
@@ -113,7 +118,8 @@
 	border-right: #878787 solid 1px;
 	padding-right:inherit;
 	}
-.main3 {
+.space {
+	height: 20px;
 
 	}
 .card-footer {
